# TransportGrid

./: CMakeLists.txt  README.md
TransportGrid/include/: Graph.h  Node.h  Package.h  PriorityQueue.h  SolutionState.h  Solver.h  Truck.h  Util.h
TransportGrid/src/: CMakeLists.txt  Graph.cpp  Node.cpp  Package.cpp  SolutionState.cpp  Solver.cpp  Truck.cpp  Util.cpp  generatedMap.txt  main.cpp
inputData/: generatedMap.txt  how_to_import_maps.txt
webapp/html/: app.html
